--- a/src/index.html
+++ b/src/index.html
@@ -5,13 +5,16 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Document</title>
+    <link rel="stylesheet" href="./styles.css">
 </head>
 <body>
-    <h1>TAGGER</h1>
-    <input id='input' type="text">
-    <button id='btn'>Add</button>
-    <ul id="list"></ul>
-    <input type="checkbox" id='readonly'>
-    <script src='./index.js'></script>
+    <div>
+        <h1>TAGGER</h1>
+        <input id='input' type="text">
+        <button id='btn'>Add</button>
+        <ul class="list" id="list"></ul>
+        <input type="checkbox" id='readonly'>
+    </div>
+<script src='./index.js'></script>
 </body>
 </html>
