--- a/src/index.html
+++ b/src/index.html
@@ -10,8 +10,11 @@
 <body>
     <div>
         <h1>TAGGER</h1>
-        <input id='input' type="text">
-        <button id='btn'>Add</button>
+        <input id='input' type="text"> 
+        <button id='btn'>Add tag/tags</button>
+        <button id='allTagsBtn'>Get tags</button>
+        <button id='replaceTagsBtn'>Replace tags</button>
+
         <ul class="list" id="list"></ul>
         <input type="checkbox" id='readonly'>
     </div>
