--- a/src/index.html
+++ b/src/index.html
@@ -14,9 +14,9 @@
         <button id='btn'>Add tag/tags</button>
         <button id='allTagsBtn'>Get tags</button>
         <button id='replaceTagsBtn'>Replace tags</button>
-
-        <ul class="list" id="list"></ul>
+        <button id='removeTagBtn'>Remove last tag</button>
         <input type="checkbox" id='readonly'>
+        <ul class="list" id="list"></ul>
     </div>
 <script src='./index.js'></script>
 </body>
