--- a/src/index.html
+++ b/src/index.html
@@ -8,14 +8,15 @@
     <link rel="stylesheet" href="./styles.css">
 </head>
 <body>
-    <div>
-        <h1>TAGGER</h1>
+    <div class="container">
         <input id='input' type="text"> 
-        <button id='btn'>Add tag/tags</button>
-        <button id='allTagsBtn'>Get tags</button>
-        <button id='replaceTagsBtn'>Replace tags</button>
-        <button id='removeTagBtn'>Remove last tag</button>
-        <input type="checkbox" id='readonly'>
+        <div class="methods">
+            <button id='btn'>Add tag/tags</button>
+            <button id='allTagsBtn'>Get tags</button>
+            <button id='replaceTagsBtn'>Replace tags</button>
+            <button id='removeTagBtn'>Remove last tag</button>
+            <span><input type="checkbox" id='readonly'> - Readonly</span>
+        </div>
         <ul class="list" id="list"></ul>
     </div>
 <script src='./index.js'></script>
