--- a/src/index.html
+++ b/src/index.html
@@ -9,7 +9,7 @@
 </head>
 <body>
     <div class="container">
-        <input id='input' type="text"> 
+        <input id='input' type="text" placeholder="Add a tag"> 
         <div class="methods">
             <button id='btn'>Add tag/tags</button>
             <button id='allTagsBtn'>Get tags</button>
